--- a/Aula Fluencia HTML/aula-fluencia-html.html
+++ b/Aula Fluencia HTML/aula-fluencia-html.html
@@ -16,7 +16,7 @@
             eligendi dolorum illum atque ut nam consectetur dignissimos blanditiis
             veniam nobis?</p>
             <ol>
-                <li>Item 01</li>
+                <li><a href="https://www.globo.com" style="color: aqua; font-weight: bold;">Item 01 de link</a></li>
                 <li>Item 02</li>
                 <li>Item 03</li>
                 <li>Item 04</li>
