--- a/Aula Fluencia HTML/aula-fluencia-html.html
+++ b/Aula Fluencia HTML/aula-fluencia-html.html
@@ -28,7 +28,7 @@
             
             <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit</em>. 
             Quod necessitatibus, dolore aspernatur soluta quaerat,<br> 
-            laudantium rerrum distinctio perspiciatis qui, 
+            laudantium rerum distinctio perspiciatis qui, 
             eligendi dolorum illum atque ut nam consectetur dignissimos blanditiis
             veniam nobis?</p>
             <ul>
