--- a/Aula Fluencia HTML/aula-fluencia-html.html
+++ b/Aula Fluencia HTML/aula-fluencia-html.html
@@ -3,11 +3,15 @@
     <head>
         <title>Aula Fluência HTML</title>
         <meta charset="utf-8">
+
+        <link rel="stylesheet" type="text/css" href="estilo.css">
+
     </head>
 
     <body>
 
         <div>
+            <!--TEXO TESTE-->
             <h1>Titulo 01</h1>
             
             <p><strong>Lorem ipsum dolor sit amet</strong> consectetur adipisicing elit.<br> 
