--- a/Aula Fluencia HTML/pagina-02.html
+++ b/Aula Fluencia HTML/pagina-02.html
@@ -3,7 +3,8 @@
     <head>
         <title>Aula Fluência HTML</title>
         <meta charset="utf-8">
-        <link rel="styleshee" type="text/css" href="estilo.css"
+        <link rel="styleshee" type="text/css" href="estilo.css">
+
     </head>
 
     <body>
